--- a/src/app/pill-edit/pill-edit.component.html
+++ b/src/app/pill-edit/pill-edit.component.html
@@ -490,45 +490,46 @@
             }} ج.م</span>
         </div> -->
 
-      <!-- <hr class="my-2">
-
+      <hr class="my-2">
+      
       <div class="summary-line sub-total">
         <span>المجموع الفرعي (المستحق):</span>
         <span class="summary-value">{{ finalTipSummary.billAmount |
-          number:'1.2-2' }} ج.م</span> </div>
-
+          number:'1.2-2' }} ج.م</span>
+      </div>
+      
       <hr class="my-2">
-
+      
       <div class="summary-line">
         <span>قيمة الدفع:</span>
         <span class="fw-bold">{{ finalTipSummary.paymentAmount |
           number:'1.2-2' }} ج.م</span>
       </div>
-
+      
       <div class="summary-line">
         <span>طريقة الدفع:</span>
         <span class="fw-bold">{{ finalTipSummary.paymentMethod }}</span>
       </div>
-
+      
       <div class="summary-line">
         <span>الإكرامية:</span>
         <span class="fw-bold">{{ finalTipSummary.tipAmount | number:'1.2-2' }}
           ج.م</span>
       </div>
-
+      
       <hr class="my-2">
-
+      
       <div class="summary-line grand-total">
         <span>المجموع الكلي بالإكرامية:</span>
         <span class="fw-bolder">{{ finalTipSummary.grandTotalWithTip |
           number:'1.2-2' }} ج.م</span>
       </div>
-
+      
       <div class="summary-line change-return">
         <span>المتبقي للرد:</span>
         <span class="fw-bolder">{{ finalTipSummary.changeToReturn |
           number:'1.2-2' }} ج.م</span>
-      </div> -->
+      </div>
     </div>
 
     <!-- dalia start -->
