--- a/src/app/pill-details/pill-details.component.html
+++ b/src/app/pill-details/pill-details.component.html
@@ -429,7 +429,7 @@
           <small>
             اسم الكاشير:
             <span>{{ invoices[0].cashier_info.first_name }} &nbsp;
-              {{ invoices[0].cashier_info.last_name }}
+              <!-- {{ invoices[0].cashier_info.last_name }} -->
             </span></small>
         </h6>
         <hr />
