--- a/src/app/side-details/side-details.component.html
+++ b/src/app/side-details/side-details.component.html
@@ -745,6 +745,7 @@ selectedOrderType === 'talabat') {
                     [(ngModel)]="cashPaymentInput"
                     [ngModelOptions]="{standalone: true}"
                     placeholder="المبلغ المدفوع"
+                    (input)="roundCashPayment()"
                     (change)="handleManualPaymentBlur(billAmount, tipModalContent)">
 
                   <!-- عرض رسالة الخطأ -->
